--- a/WatchWoods WatchKit Extension/Info.plist
+++ b/WatchWoods WatchKit Extension/Info.plist
@@ -7,7 +7,7 @@
 		<key>NSExtensionAttributes</key>
 		<dict>
 			<key>WKAppBundleIdentifier</key>
-			<string>fwcd.Woods.watchkitapp</string>
+			<string>dev.fwcd.Woods.watchkitapp</string>
 		</dict>
 		<key>NSExtensionPointIdentifier</key>
 		<string>com.apple.watchkit</string>
