--- a/Woods.xcodeproj/xcshareddata/xcschemes/Woods (watchOS) (Complication).xcscheme
+++ b/Woods.xcodeproj/xcshareddata/xcschemes/Woods (watchOS) (Complication).xcscheme
@@ -55,8 +55,10 @@
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES"
       launchAutomaticallySubstyle = "32">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <RemoteRunnable
+         runnableDebuggingMode = "2"
+         BundleIdentifier = "com.apple.Carousel"
+         RemotePath = "/(null)">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "35126CCA2745CE1D00CF998C"
@@ -64,7 +66,7 @@
             BlueprintName = "Woods (watchOS)"
             ReferencedContainer = "container:Woods.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </RemoteRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -73,8 +75,10 @@
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES"
       launchAutomaticallySubstyle = "32">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <RemoteRunnable
+         runnableDebuggingMode = "2"
+         BundleIdentifier = "com.apple.Carousel"
+         RemotePath = "/(null)">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "35126CCA2745CE1D00CF998C"
@@ -82,7 +86,16 @@
             BlueprintName = "Woods (watchOS)"
             ReferencedContainer = "container:Woods.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </RemoteRunnable>
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "35126CCA2745CE1D00CF998C"
+            BuildableName = "Woods.app"
+            BlueprintName = "Woods (watchOS)"
+            ReferencedContainer = "container:Woods.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
