--- a/Woods.xcodeproj/xcshareddata/xcschemes/Woods (watchOS) (Complication).xcscheme
+++ b/Woods.xcodeproj/xcshareddata/xcschemes/Woods (watchOS) (Complication).xcscheme
@@ -55,10 +55,8 @@
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES"
       launchAutomaticallySubstyle = "32">
-      <RemoteRunnable
-         runnableDebuggingMode = "2"
-         BundleIdentifier = "com.apple.Carousel"
-         RemotePath = "/(null)">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "35126CCA2745CE1D00CF998C"
@@ -66,7 +64,7 @@
             BlueprintName = "Woods (watchOS)"
             ReferencedContainer = "container:Woods.xcodeproj">
          </BuildableReference>
-      </RemoteRunnable>
+      </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -75,10 +73,8 @@
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES"
       launchAutomaticallySubstyle = "32">
-      <RemoteRunnable
-         runnableDebuggingMode = "2"
-         BundleIdentifier = "com.apple.Carousel"
-         RemotePath = "/(null)">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "35126CCA2745CE1D00CF998C"
@@ -86,16 +82,7 @@
             BlueprintName = "Woods (watchOS)"
             ReferencedContainer = "container:Woods.xcodeproj">
          </BuildableReference>
-      </RemoteRunnable>
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "35126CCA2745CE1D00CF998C"
-            BuildableName = "Woods.app"
-            BlueprintName = "Woods (watchOS)"
-            ReferencedContainer = "container:Woods.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
