--- a/Woods.xcodeproj/xcshareddata/xcschemes/Woods (macOS).xcscheme
+++ b/Woods.xcodeproj/xcshareddata/xcschemes/Woods (macOS).xcscheme
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
    LastUpgradeVersion = "1330"
-   version = "2.0">
+   version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
@@ -14,23 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "35126CCA2745CE1D00CF998C"
+               BlueprintIdentifier = "35222986274A756C00090224"
                BuildableName = "Woods.app"
-               BlueprintName = "Woods (watchOS)"
-               ReferencedContainer = "container:Woods.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "YES"
-            buildForProfiling = "YES"
-            buildForArchiving = "YES"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "C73E04B6249F9F4700C6E22C"
-               BuildableName = "Woods.app"
-               BlueprintName = "Woods (iOS)"
+               BlueprintName = "Woods (macOS)"
                ReferencedContainer = "container:Woods.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -42,6 +28,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "35222996274A756D00090224"
+               BuildableName = "Tests (macOS).xctest"
+               BlueprintName = "Tests (macOS)"
+               ReferencedContainer = "container:Woods.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
@@ -53,15 +49,14 @@
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
-      allowLocationSimulation = "YES"
-      launchAutomaticallySubstyle = "32">
+      allowLocationSimulation = "YES">
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "35126CCA2745CE1D00CF998C"
+            BlueprintIdentifier = "35222986274A756C00090224"
             BuildableName = "Woods.app"
-            BlueprintName = "Woods (watchOS)"
+            BlueprintName = "Woods (macOS)"
             ReferencedContainer = "container:Woods.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -71,15 +66,14 @@
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
-      debugDocumentVersioning = "YES"
-      launchAutomaticallySubstyle = "32">
+      debugDocumentVersioning = "YES">
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "35126CCA2745CE1D00CF998C"
+            BlueprintIdentifier = "35222986274A756C00090224"
             BuildableName = "Woods.app"
-            BlueprintName = "Woods (watchOS)"
+            BlueprintName = "Woods (macOS)"
             ReferencedContainer = "container:Woods.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
