--- a/Woods.xcodeproj/xcshareddata/xcschemes/Woods (macOS).xcscheme
+++ b/Woods.xcodeproj/xcshareddata/xcschemes/Woods (macOS).xcscheme
@@ -33,7 +33,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "35222996274A756D00090224"
-               BuildableName = "Tests (macOS).xctest"
+               BuildableName = "WoodsTests.xctest"
                BlueprintName = "Tests (macOS)"
                ReferencedContainer = "container:Woods.xcodeproj">
             </BuildableReference>
