--- a/Woods.xcodeproj/xcshareddata/xcschemes/Woods (watchOS) (Notification).xcscheme
+++ b/Woods.xcodeproj/xcshareddata/xcschemes/Woods (watchOS) (Notification).xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1330"
+   LastUpgradeVersion = "1400"
    version = "2.0">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -55,11 +55,9 @@
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES"
       launchAutomaticallySubstyle = "8"
-      notificationPayloadFile = "watchOS (WatchKit Extension)/PushNotificationPayload.apns">
-      <RemoteRunnable
-         runnableDebuggingMode = "2"
-         BundleIdentifier = "com.apple.Carousel"
-         RemotePath = "/(null)">
+      notificationPayloadFile = "watchOS/PushNotificationPayload.apns">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "35126CCA2745CE1D00CF998C"
@@ -67,7 +65,7 @@
             BlueprintName = "Woods (watchOS)"
             ReferencedContainer = "container:Woods.xcodeproj">
          </BuildableReference>
-      </RemoteRunnable>
+      </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -76,11 +74,9 @@
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES"
       launchAutomaticallySubstyle = "8"
-      notificationPayloadFile = "watchOS (WatchKit Extension)/PushNotificationPayload.apns">
-      <RemoteRunnable
-         runnableDebuggingMode = "2"
-         BundleIdentifier = "com.apple.Carousel"
-         RemotePath = "/(null)">
+      notificationPayloadFile = "watchOS/PushNotificationPayload.apns">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "35126CCA2745CE1D00CF998C"
@@ -88,16 +84,7 @@
             BlueprintName = "Woods (watchOS)"
             ReferencedContainer = "container:Woods.xcodeproj">
          </BuildableReference>
-      </RemoteRunnable>
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "35126CCA2745CE1D00CF998C"
-            BuildableName = "Woods.app"
-            BlueprintName = "Woods (watchOS)"
-            ReferencedContainer = "container:Woods.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
