--- a/Woods/Info.plist
+++ b/Woods/Info.plist
@@ -84,7 +84,7 @@
 				<string>public.data</string>
 			</array>
 			<key>UTTypeDescription</key>
-			<string>GPS Exchange Format</string>
+			<string>GPX Waypoint</string>
 			<key>UTTypeIconFiles</key>
 			<array/>
 			<key>UTTypeIdentifier</key>
